[gd_scene load_steps=34 format=2]

[ext_resource path="res://Minijuegos/Lanchas/scenes/Lanchas-Main.gd" type="Script" id=1]
[ext_resource path="res://Minijuegos/Lanchas/scenes/SeaScript.gd" type="Script" id=2]
[ext_resource path="res://Minijuegos/Lanchas/scenes/ship-gen.gd" type="Script" id=3]
[ext_resource path="res://Minijuegos/Lanchas/scenes/boat-move.gd" type="Script" id=4]
[ext_resource path="res://Minijuegos/Lanchas/scenes/Musica_fondo.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/pirate.tres" type="DynamicFont" id=6]
[ext_resource path="res://Minijuegos/Lanchas/etc/game_over_gui.tscn" type="PackedScene" id=7]
[ext_resource path="res://Minijuegos/Lanchas/LoboMarino.tscn" type="PackedScene" id=8]
[ext_resource path="res://Minijuegos/Lanchas/etc/DialogUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Minijuegos/Lanchas/Ship.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/img/barco-top.png" type="Texture" id=11]
[ext_resource path="res://assets/img/puerto_map.png" type="Texture" id=12]
[ext_resource path="res://assets/sounds/POL-the-journey-begins-short.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/Hit damage 1.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/Boss hit 1.wav" type="AudioStream" id=15]
[ext_resource path="res://Minijuegos/Lanchas/Cloud.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/img/painting1.jpg" type="Texture" id=17]
[ext_resource path="res://Minijuegos/Lanchas/etc/secret_gui.tscn" type="PackedScene" id=18]
[ext_resource path="res://Minijuegos/Lanchas/Popup.tscn" type="PackedScene" id=19]
[ext_resource path="res://Minijuegos/Lanchas/Hook.tscn" type="PackedScene" id=20]
[ext_resource path="res://Minijuegos/Lanchas/scenes/ship-move.gd" type="Script" id=21]

[sub_resource type="Animation" id=1]
resource_name = "SeaWaves"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -314.414, -1179.77 ), Vector2( -330, -1179.77 ), Vector2( -314.414, -1179.77 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.77269
height = 12.7344

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.89392
height = 12.7344

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 198.143, 2282.39 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 87.6999, 447.385 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 87.6999, 447.385 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 638.018, 104.094 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 26.5238, 32.2707 )

[sub_resource type="Animation" id=9]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 0.870588, 0.709804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 0.870588, 0.709804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 0.870588, 0.709804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.917647, 0.870588, 0.709804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MapMesh" type="StaticBody2D" parent="." groups=[
"scenary",
]]
position = Vector2( -316.212, -1179.77 )
rotation = -2.25464
scale = Vector2( 6.57007, 6.57007 )
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="MapMesh"]
position = Vector2( 16.7789, -336.597 )
rotation = 0.00872665
scale = Vector2( 0.258094, 0.258094 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapMesh"]
polygon = PoolVector2Array( -78.7779, -314.431, 132.209, -146.396, 126.679, -135.937, 56.8733, -171.996, -12.4218, -228.474, -39.1978, -166.744, -33.5741, -111.558, -39.5722, -109.974, -45.2613, -165.802, -28.9099, -224.849, -39.5863, -241.084, -140.578, -311.223, -217.666, -173.891, -159.529, -140.794, -97.6512, -201.318, -86.1129, -195.216, -152.44, -115.862, -210.13, -107.072, -221.352, -60.0797, -213.016, -13.9884, -157.325, -19.7127, -157.415, -12.9226, -190.526, -7.54705, -188.099, 16.7223, -200.1, 31.2197, -205.304, 33.1129, -208.646, 26.4473, -208.41, 2.64464, -258.465, 15.1255, -269.296, 44.7276, -285.902, 69.9978, -250.533, 64.5718, -234.836, 77.054, -233.174, 101.785, -223.249, 118.29, -206.91, 126.149, -179.045, 128.48, -163.543, 154.683, -190.303, 191.125, -215.004, 212.768, -286.624, 216.564, -214.423, 212.954, -206.56, 232.007, -263.519, 254.831, -264.241, 275.047, -193.485, 265.661, -205.853, 232.584, -168.215, 259.885, -87.3507, 185.518, -101.069, 155.194, -114.2, 164.891, -132.751, 129.176, -122.729, 126.314, -102.513, 133.534, -84.4627, 176.854, 10.1198, 45.4496, 98.9262, -30.3607, 238.324, -93.9184, 658.555, -358.302, 652.126, 316.652, -118.094, 315.746, -633.815, 320.115, -631.516, -753.074, -60.0137, -779.032, 667.012, -796.064, 657.996, -355.76, 549.322, -289.733, 403.399, -634.34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MapMesh"]
anims/SeaWaves = SubResource( 1 )

[node name="EntityGenerator" type="Node2D" parent="."]
script = ExtResource( 3 )
SHIP = ExtResource( 10 )
LOBO = ExtResource( 8 )
HOOK = ExtResource( 20 )
CLOUD = ExtResource( 16 )

[node name="InitialPosition" type="Node2D" parent="."]
position = Vector2( 1500, -1200 )
rotation = 1.5708

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1500, -1200 )
rotation = 4.58559e-06
current = true

[node name="Boat" type="KinematicBody2D" parent="." groups=[
"player",
]]
position = Vector2( 1500, -1200 )
rotation = 1.5708
collision_mask = 31
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="Boat"]
rotation = -1.42109e-14
scale = Vector2( 0.972945, 0.972945 )
texture = ExtResource( 11 )

[node name="col" type="CollisionShape2D" parent="Boat"]
visible = false
scale = Vector2( 6, 6 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Boat"]

[node name="col2" type="CollisionShape2D" parent="Boat/Area2D"]
position = Vector2( -0.841187, -1.68176 )
scale = Vector2( 6, 6 )
shape = SubResource( 3 )

[node name="GameOverUI" parent="." instance=ExtResource( 7 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
margin_left = 28.364
margin_top = 575.462
margin_right = 571.364
margin_bottom = 676.465
rect_rotation = -89.9999
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "Integridad Lancha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarBG" type="ColorRect" parent="UI"]
margin_left = 93.0
margin_top = 577.0
margin_right = 568.0
margin_bottom = 633.0
rect_rotation = -89.9999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ColorRect" parent="UI"]
margin_left = 98.0
margin_top = 572.0
margin_right = 563.0
margin_bottom = 618.0
rect_rotation = -89.9999
color = Color( 0.960784, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="UI"]
margin_left = 880.496
margin_top = 556.419
margin_right = 1423.5
margin_bottom = 657.422
rect_rotation = -89.9999
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "Progreso Viaje"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarBG" type="ColorRect" parent="UI"]
margin_left = 946.842
margin_top = 570.813
margin_right = 1421.84
margin_bottom = 626.813
rect_rotation = -89.9999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ColorRect" parent="UI"]
margin_left = 952.033
margin_top = 565.85
margin_right = 1417.03
margin_bottom = 611.85
rect_rotation = -89.9999
color = Color( 0.247059, 0.52549, 0.960784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogUI" parent="UI" instance=ExtResource( 9 )]
margin_right = 325.49
margin_bottom = 317.755

[node name="AreaMarAbierto" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaMarAbierto"]
position = Vector2( -2484.02, -1090.1 )
shape = SubResource( 4 )

[node name="CollisionLimits" type="StaticBody2D" parent="."]
position = Vector2( 3000, 3000 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionLimits"]
position = Vector2( -524.872, 16.0844 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CollisionLimits"]
position = Vector2( 616.958, 32.8824 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CollisionLimits"]
position = Vector2( 46.5002, 419.675 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CollisionLimits"]
position = Vector2( 45.4183, -421.526 )
shape = SubResource( 7 )

[node name="Hit_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
pitch_scale = 1.5

[node name="Death_Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 15 )
volume_db = -20.0
pitch_scale = 1.5

[node name="Musica_fondo" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -30.0
pitch_scale = 0.9
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Musica_fondo"]

[node name="Cloud" parent="." instance=ExtResource( 16 )]
modulate = Color( 1, 1, 1, 0.560784 )
position = Vector2( 878.952, -877.416 )
scale = Vector2( 2, 2 )
script = ExtResource( 21 )
speed_mult = 0.2
horizontal = 1
size = 3.0
persistent = 1

[node name="Cloud2" parent="." instance=ExtResource( 16 )]
modulate = Color( 1, 1, 1, 0.415686 )
position = Vector2( -433.439, -594.574 )
rotation = 6.0528
scale = Vector2( 2, 2 )
script = ExtResource( 21 )
speed_mult = 0.2
size = 3.0
persistent = 1

[node name="Cloud3" parent="." instance=ExtResource( 16 )]
modulate = Color( 0.823529, 0.792157, 0.529412, 0.623529 )
position = Vector2( -987.537, 429.809 )
scale = Vector2( 3, 3 )
script = ExtResource( 21 )
speed_mult = 0.2
size = 3.0
persistent = 1

[node name="Painting1" type="Area2D" parent="."]
modulate = Color( 0.988369, 0.981723, 0.959015, 1 )
position = Vector2( -1169.16, 153.062 )
rotation = 0.502655
scale = Vector2( 1.02825, 1.02825 )

[node name="Sprite" type="Sprite" parent="Painting1"]
scale = Vector2( 0.104969, 0.104969 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Painting1"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Painting1"]
anims/Idle = SubResource( 9 )

[node name="Painting2" type="Area2D" parent="."]
modulate = Color( 0.988369, 0.981723, 0.959015, 1 )
position = Vector2( -1901.11, -953.829 )
rotation = 0.502655
scale = Vector2( 1.02825, 1.02825 )

[node name="Sprite" type="Sprite" parent="Painting2"]
scale = Vector2( 0.104969, 0.104969 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Painting2"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Painting2"]
anims/Idle = SubResource( 10 )

[node name="Painting3" type="Area2D" parent="."]
modulate = Color( 0.988369, 0.981723, 0.959015, 1 )
position = Vector2( 886.895, -305.829 )
rotation = 0.502655
scale = Vector2( 1.02825, 1.02825 )

[node name="Sprite" type="Sprite" parent="Painting3"]
scale = Vector2( 0.104969, 0.104969 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Painting3"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Painting3"]
anims/Idle = SubResource( 11 )

[node name="Painting4" type="Area2D" parent="."]
modulate = Color( 0.988369, 0.981723, 0.959015, 1 )
position = Vector2( -118.413, -97.1749 )
rotation = 0.502655
scale = Vector2( 1.02825, 1.02825 )

[node name="Sprite" type="Sprite" parent="Painting4"]
scale = Vector2( 0.104969, 0.104969 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Painting4"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Painting4"]
anims/Idle = SubResource( 12 )

[node name="SecretGUI" parent="." instance=ExtResource( 18 )]

[node name="Popup" parent="." instance=ExtResource( 19 )]

[node name="Lobo3" parent="." instance=ExtResource( 8 )]
position = Vector2( -26.9392, -736.335 )
speed_mult = 0.0
size = 1.5
persistent = 1

[node name="Lobo4" parent="." instance=ExtResource( 8 )]
position = Vector2( -94.2869, -1153.89 )
speed_mult = 0.0
size = 1.5
persistent = 1

[node name="Lobo5" parent="." instance=ExtResource( 8 )]
position = Vector2( -395.107, -350.208 )
speed_mult = 0.0
size = 5.0
persistent = 1

[node name="Lobo6" parent="." instance=ExtResource( 8 )]
position = Vector2( -745.315, -1311.04 )
speed_mult = 0.0
size = 1.5
persistent = 1

[node name="Lobo7" parent="." instance=ExtResource( 8 )]
position = Vector2( -747.315, -1076.52 )
speed_mult = 0.0
size = 2.5
persistent = 1

[node name="Lobo8" parent="." instance=ExtResource( 8 )]
position = Vector2( -752.723, -844.091 )
speed_mult = 0.0
size = 1.5
persistent = 1

[node name="Lobo2" parent="." instance=ExtResource( 8 )]
position = Vector2( 640.656, -587.584 )
speed_mult = 0.0
persistent = 1

[node name="Lobo9" parent="." instance=ExtResource( 8 )]
position = Vector2( 634.992, -874.522 )
speed_mult = 0.0
size = 2.0
persistent = 1

[node name="Lobo10" parent="." instance=ExtResource( 8 )]
position = Vector2( 246.942, -475.924 )
speed_mult = 0.0
persistent = 1

[connection signal="body_entered" from="Boat/Area2D" to="Boat" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Boat/Area2D" to="Boat" method="_on_Area2D_body_exited"]
[connection signal="back_menu" from="GameOverUI" to="." method="_on_GameOverUI_back_menu"]
[connection signal="ok_pressed" from="GameOverUI" to="." method="_on_GameOverUI_ok_pressed"]
[connection signal="dialog_terminated" from="UI/DialogUI" to="." method="_on_Control_dialog_terminated"]
[connection signal="body_entered" from="AreaMarAbierto" to="." method="_on_AreaMarAbierto_body_entered"]
[connection signal="body_entered" from="Painting1" to="." method="_on_Painting1_body_entered"]
[connection signal="body_entered" from="Painting2" to="." method="_on_Painting2_body_entered"]
[connection signal="body_entered" from="Painting3" to="." method="_on_Painting3_body_entered"]
[connection signal="body_entered" from="Painting4" to="." method="_on_Painting4_body_entered"]
[connection signal="ok_pressed" from="SecretGUI" to="." method="_on_SecretGUI_ok_pressed"]
